<resources>
    <string name="app_name">MichaelKingWeightTracker</string>
    <string name="_151_2_lbs">151.2 lbs</string>
    <string name="_01_15_2026">01/15/2026</string>
    <string name="insert_notes_here">Insert Notes Here</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="first_time_register">First Time? Register</string>
    <string name="weighttracker">WeightTracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="weight_lbs_or_kg">Weight (lbs or kg)</string>
    <string name="date_mm_dd_yyyy">Date (mm/dd/yyyy)</string>
    <string name="notes_optional">Notes (Optional)</string>
    <string name="enter_your_goal_weight_in_lbs">Enter your goal weight in lbs:</string>
    <string name="goal_weight_lbs">Goal Weight (lbs)</string>
    <string name="goal_weight_not_set">Goal Weight: Not Set</string>
    <string name="add_entry">Add Entry</string>
    <string name="set_goal_weight">Set Goal Weight</string>
</resources>