<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weighttracker"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="#001bff"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/textUsername"
        android:layout_width="345dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="username"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="345dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000FF"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_time_register"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0000FF"
        android:textColor="#ffffff"/>
</LinearLayout>